--- a/deployment-node-full-stack.yaml
+++ b/deployment-node-full-stack.yaml
@@ -8,126 +8,10 @@ metadata:
     app.openshift.io/vcs-uri: 'https://github.com/msatyan/NodeFullStack.git'
     deployment.kubernetes.io/revision: '3'
     image.openshift.io/triggers: >-
-      [{"from":{"kind":"ImageStreamTag","name":"node-full-stack-git:latest","namespace":"test-quota"},"fieldPath":"spec.template.spec.containers[?(@.name==\"node-full-stack-git\")].image","pause":"false"}]
+      [{"from":{"kind":"ImageStreamTag","name":"node-full-stack-git:latest","namespace":"node-test2"},"fieldPath":"spec.template.spec.containers[?(@.name==\"node-full-stack-git\")].image","pause":"false"}]
     openshift.io/generated-by: OpenShiftWebConsole
-  resourceVersion: '1054794'
   name: node-full-stack-git
-  uid: 9074da34-510b-4995-ba35-f289b8de44a3
-  creationTimestamp: '2022-10-04T20:54:31Z'
-  generation: 51
-  managedFields:
-    - manager: openshift-controller-manager
-      operation: Update
-      apiVersion: apps/v1
-      time: '2022-10-04T20:55:32Z'
-      fieldsType: FieldsV1
-      fieldsV1:
-        'f:spec':
-          'f:template':
-            'f:spec':
-              'f:containers':
-                'k:{"name":"node-full-stack-git"}':
-                  'f:image': {}
-    - manager: Mozilla
-      operation: Update
-      apiVersion: apps/v1
-      time: '2022-10-04T21:03:58Z'
-      fieldsType: FieldsV1
-      fieldsV1:
-        'f:metadata':
-          'f:annotations':
-            .: {}
-            'f:alpha.image.policy.openshift.io/resolve-names': {}
-            'f:app.openshift.io/route-disabled': {}
-            'f:app.openshift.io/vcs-ref': {}
-            'f:app.openshift.io/vcs-uri': {}
-            'f:image.openshift.io/triggers': {}
-            'f:openshift.io/generated-by': {}
-          'f:labels':
-            .: {}
-            'f:app': {}
-            'f:app.kubernetes.io/component': {}
-            'f:app.kubernetes.io/instance': {}
-            'f:app.kubernetes.io/name': {}
-            'f:app.kubernetes.io/part-of': {}
-            'f:app.openshift.io/runtime': {}
-            'f:app.openshift.io/runtime-version': {}
-        'f:spec':
-          'f:progressDeadlineSeconds': {}
-          'f:revisionHistoryLimit': {}
-          'f:selector': {}
-          'f:strategy':
-            'f:rollingUpdate':
-              .: {}
-              'f:maxSurge': {}
-              'f:maxUnavailable': {}
-            'f:type': {}
-          'f:template':
-            'f:metadata':
-              'f:labels':
-                .: {}
-                'f:app': {}
-                'f:deployment': {}
-            'f:spec':
-              'f:containers':
-                'k:{"name":"node-full-stack-git"}':
-                  .: {}
-                  'f:imagePullPolicy': {}
-                  'f:name': {}
-                  'f:ports':
-                    .: {}
-                    'k:{"containerPort":8080,"protocol":"TCP"}':
-                      .: {}
-                      'f:containerPort': {}
-                      'f:protocol': {}
-                  'f:resources':
-                    .: {}
-                    'f:limits':
-                      .: {}
-                      'f:cpu': {}
-                      'f:memory': {}
-                    'f:requests':
-                      .: {}
-                      'f:cpu': {}
-                      'f:memory': {}
-                  'f:terminationMessagePath': {}
-                  'f:terminationMessagePolicy': {}
-              'f:dnsPolicy': {}
-              'f:restartPolicy': {}
-              'f:schedulerName': {}
-              'f:securityContext': {}
-              'f:terminationGracePeriodSeconds': {}
-    - manager: kube-controller-manager
-      operation: Update
-      apiVersion: apps/v1
-      time: '2022-10-04T21:08:21Z'
-      fieldsType: FieldsV1
-      fieldsV1:
-        'f:metadata':
-          'f:annotations':
-            'f:deployment.kubernetes.io/revision': {}
-        'f:status':
-          'f:conditions':
-            .: {}
-            'k:{"type":"Available"}':
-              .: {}
-              'f:lastTransitionTime': {}
-              'f:lastUpdateTime': {}
-              'f:message': {}
-              'f:reason': {}
-              'f:status': {}
-              'f:type': {}
-            'k:{"type":"Progressing"}':
-              .: {}
-              'f:lastTransitionTime': {}
-              'f:lastUpdateTime': {}
-              'f:message': {}
-              'f:reason': {}
-              'f:status': {}
-              'f:type': {}
-          'f:observedGeneration': {}
-      subresource: status
-  namespace: test-quota
+  namespace: node-test2
   labels:
     app: node-full-stack-git
     app.kubernetes.io/component: node-full-stack-git
