--- a/imagestream-node-full-stack.yaml
+++ b/imagestream-node-full-stack.yaml
@@ -3,6 +3,7 @@ apiVersion: image.openshift.io/v1
 metadata:
   annotations:
     app.openshift.io/vcs-ref: ''
+    argocd.argoproj.io/sync-wave: "0"
     app.openshift.io/vcs-uri: 'https://github.com/msatyan/NodeFullStack.git'
     openshift.io/generated-by: OpenShiftWebConsole
   name: node-full-stack-git
