--- a/deployment-node-full-stack.yaml
+++ b/deployment-node-full-stack.yaml
@@ -4,6 +4,7 @@ metadata:
   annotations:
     alpha.image.policy.openshift.io/resolve-names: '*'
     app.openshift.io/route-disabled: 'false'
+    argocd.argoproj.io/sync-wave: "0"
     app.openshift.io/vcs-ref: ''
     app.openshift.io/vcs-uri: 'https://github.com/msatyan/NodeFullStack.git'
     deployment.kubernetes.io/revision: '3'
