--- a/route-node-full-stack.yaml
+++ b/route-node-full-stack.yaml
@@ -12,6 +12,7 @@ metadata:
     app.openshift.io/runtime-version: 16-ubi8
   annotations:
     openshift.io/host.generated: 'true'
+    argocd.argoproj.io/sync-wave: "0"
 spec:
   to:
     kind: Service
