changed namespace name

--- a/namespace-node-test-gitops.yaml
+++ b/namespace-node-test-gitops.yaml
@@ -1,7 +1,7 @@
 apiVersion: v1
 kind: Namespace
 metadata:
-  name: node-test-gitops
+  name: node-test-appset
   annotations:
     argocd.argoproj.io/sync-wave: "-1"
   labels:
